--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
 
                     <div class="logo">
                         <img class="logo_img" src="./img/pineapple.png" alt="logo">
-                        <p class="logo_text text">HandBrake</p>
+                        <p class="logo_text ">HandBrake</p>
                     </div>
 
                     <div class="nav_links">
                         <ul class="list">
-                            <li class="link text"><a href="#">Docs</a></li>
-                            <li class="link text"><a href="#">GitHub</a></li>
-                            <li class="link text"><a href="#">News</a></li>
-                            <li class="link text"><a href="#">Community & Support</a></li>
+                            <li class="link "><a href="#">Docs</a></li>
+                            <li class="link "><a href="#">GitHub</a></li>
+                            <li class="link "><a href="#">News</a></li>
+                            <li class="link "><a href="#">Community & Support</a></li>
                         </ul>
 
-                        <button class="button">Downloads</button>
+                        <button class="button text">Downloads</button>
                     </div>
 
             </nav>
 
             <div class="header_content">
                 <div class="logo_2">
-                    <h1 class="h1 text">
+                    <h1 class="h1">
                         Handbrake
                     </h1>
-                    <p class="logo_2__text_1 text">
+                    <p class="logo_2__text_1">
                         The open source video transcoder
                     </p>
-                    <p class="logo_2__text_2 text">
+                    <p class="logo_2__text_2">
                         HandBrake is a tool for converting video from nearly any format to a selection of modern, widely supported codecs
                     </p>
                     <button class="button_2 text">Download for Free</button>
@@ -46,7 +46,17 @@
                 <img class="laptop" src="./img/laptop.png" alt="laptop">
             </div>
         </header>
-        <main></main>
+
+
+        <nav class="nav_2">
+            <button class="button_nav text">Convert video from nearly any format</button>
+            <button class="button_nav text">Free and Open Source video converter</button>
+            <button class="button_nav text">Multi-Platform desktop application</button>
+        </nav>
+
+        <main>
+
+        </main>
         <footer></footer>
     </div>
     
