create_button_anim

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <li class="link "><a href="#">Community & Support</a></li>
                         </ul>
 
-                        <button class="button text">Downloads</button>
+                        <button class="button text button_anim">Downloads</button>
                     </div>
 
             </nav>
@@ -41,7 +41,7 @@
                     <p class="logo_2__text_2">
                         HandBrake is a tool for converting video from nearly any format to a selection of modern, widely supported codecs
                     </p>
-                    <button class="button_2 text">Download for Free</button>
+                    <button class="button_2 text button_anim">Download for Free</button>
                 </div>
                 <img class="laptop" src="./img/laptop.png" alt="laptop">
             </div>
@@ -49,9 +49,9 @@
 
 
         <nav class="nav_2">
-            <button class="button_nav text">Convert video from nearly any format</button>
-            <button class="button_nav text">Free and Open Source video converter</button>
-            <button class="button_nav text">Multi-Platform desktop application</button>
+            <button class="button_nav text button_anim">Convert video from nearly any format</button>
+            <button class="button_nav text button_anim">Free and Open Source video converter</button>
+            <button class="button_nav text button_anim">Multi-Platform desktop application</button>
         </nav>
 
         <main>
