--- a/index.html
+++ b/index.html
@@ -54,8 +54,58 @@
             <button class="button_nav text button_anim">Multi-Platform desktop application</button>
         </nav>
 
-        <main>
 
+
+
+
+        <main class="main">
+            <h1 class="header_main">
+                Just a few reason you will love HandBrake
+            </h1>
+            <div class="rectangle"></div>
+            <ul class="content">
+                <li class="main_list">
+                    <img src="./img/Rectangle_1.png" alt="rectangle" class="img_in_main">
+                </li>
+                <li class="main_list"> 
+                    <p class="p_in_main_1">Optimised for easy use</p>
+                    <p class="p_in_main_2">Built-in Device Presets</p>
+                    <p class="p_in_main_3">Get started with HandBrake in seconds by choosing a profile optimised for your device, or choose a universal profile for standard or high quality conversions. Simple, easy, fast. For those that want more choice, tweak many basic and advanced options to improve your encodes.</p>
+                </li>
+                <li class="main_list">
+                    <p class="p_in_main_1">Modern video formats</p>
+                    <p class="p_in_main_2">Supported Input Sources</p>
+                    <p class="p_in_main_3">Handbrake can process most common multimedia files and any DVD or BluRay sources that do not contain any kind of copy protection.</p>
+                    
+                    <div class="caption_in_main">Outputs</div>
+                    <ol class="list_in_main_list">
+                        <li class="item">File Containers: .MP4(.M4V) and .MKV</li>
+                        <li class="item">Video Encoders: H.265 (x265 and QuickSync), H.264(x264 and QuickSync), H.265 MPEG-4 and MPEG-2, VP8, VP9 and Theora</li>
+                        <li class="item">Audio Encoders: AAC / HE-AAC, MP3, Flac, AC3, or Vorbis</li>
+                        <li class="item">Audio Pass-thru: AC-3, E-AC3, DTS, DTS-HD, TrueHD, AAC and MP3 tracks</li>
+                    </ol>
+                </li>
+                <li class="main_list">
+                    <img src="./img/Rectangle_2.png" alt="rectangle" class="img_in_main">
+                </li>
+                <li class="main_list">
+                    <img src="./img/Rectangle_3.png" alt="rectangle" class="img_in_main">
+                </li>
+                <li class="main_list">
+                    <p class="p_in_main_1">With you in mind</p>
+                    <p class="p_in_main_2">Even more features for you</p>
+                    <ol class="list_in_main_list_2">
+                        <li class="item">Title / chapter and range selection</li>
+                        <li class="item">Batch Scan and Queueing of encodes</li>
+                        <li class="item">Live Static and Video Preview</li>
+                        <li class="item">Support for VFR and CFR</li>
+                        <li class="item">Chapter Markers</li>
+                        <li class="item">Subtitles (VobSub, Closed Captions CEA-608, SSA, SRT)</li>
+                        <li class="item">Constant Quality or Average Bitrate Video Encoding</li>
+                        <li class="item">Video Filters: Deinterlacing, Decomb, Denoise, Detelecine, Deblock, Grayscale, Cropping and scaling</li>
+                    </ol>
+                </li>
+            </ul>
         </main>
         <footer></footer>
     </div>
