--- a/index.html
+++ b/index.html
@@ -56,8 +56,6 @@
 
 
 
-
-
         <main class="main">
             <h1 class="header_main">
                 Just a few reason you will love HandBrake
@@ -107,7 +105,25 @@
                 </li>
             </ul>
         </main>
-        <footer></footer>
+
+        <aside class="aside">
+            <section class="section">
+                <p class="p_in_aside">Open Source Licence</p>
+                <p class="p_in_main_3">Most of HandBrake's source code is covered by the GNU General Public License, version 2. A copy of which is included with every release in the COPYING file. Portions are covered under BSD 3 Clause</p>
+            </section>
+            <section class="section">
+                <p class="p_in_aside">Credits</p>
+                <p class="p_in_main_3">HandBrake uses a lot of (L)GPL or BSD licensed libraries:  A list of these is available here.  Thank their authors!</p>
+            </section>
+        </aside>
+
+
+        <footer class="footer">
+            <div class="container_footer">
+                <p class="p_in_footer">Copyright 2020 © <span class="white">The HandBrake Team</span> | Privacy Policy</p>
+                <p class="p_in_footer">Found a bug? <span class="white">Talk to us</span></p>
+            </div>
+        </footer>
     </div>
     
 </body>
